Fixed a layout bug that bootstrap created.

--- a/com.getshop.client/ROOT/js/daterangepicker/daterangepicker.css
+++ b/com.getshop.client/ROOT/js/daterangepicker/daterangepicker.css
@@ -88,6 +88,7 @@
     border-radius: 4px;
     border: 1px solid transparent;
     white-space: nowrap;
+    box-sizing: border-box;
     cursor: pointer; }
     .daterangepicker td.available:hover, .daterangepicker th.available:hover {
       background-color: #329ad6;
